--- a/Beluga.uproject
+++ b/Beluga.uproject
@@ -1,11 +1,22 @@
 {
 	"FileVersion": 3,
 	"EngineAssociation": "5.1",
+	"Category": "",
+	"Description": "",
 	"Modules": [
 		{
 			"Name": "Beluga",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "ModelingToolsEditorMode",
+			"Enabled": true,
+			"TargetAllowList": [
+				"Editor"
+			]
 		}
 	]
 }
